--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -48,6 +48,11 @@ nav li a:hover {
     color: white;
 }
 
+.especial {
+    text-decoration: none;
+    color: black;
+}
+
 form {
     display:flex;
     flex-direction: column;
